# funance

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  Pipfile  README.md  django_helpers  docker-compose.yml  funance_data  index.py  manage.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-lock.txt  requirements.txt
.github/workflows/: django.yml
accounts/: admin.py  api.py  factories.py  serializers.py  test_api.py
accounts/migrations/: 0001_initial.py
api/: mixins.py  urls.py
funance/: asgi.py  elastic.py  settings.py  urls.py  wsgi.py
funance/utils/: pagination.py
funds/: admin.py  api.py  confidence.py  funds.py  models.py  prefetch.py  serializers.py  test_api.py
funds/migrations/: 0001_initial.py  0002_alter_fundpurchase_quantity.py  0003_remove_fund_available_cash_remove_fund_currency_and_more.py  0004_remove_fundallocation_name_fund_created_at_and_more.py  0005_remove_fund_shares_fundversion_fundversionallocation_and_more.py  0006_alter_fundversion_parent.py  0007_fund_active_version.py  0008_portfolio_fund_portfolio.py  0009_fundversion_portfolio_shares_portfolio_shares.py  0010_portfolioweek.py  0011_portfolioweek_net_cost_basis.py  0012_fundversion_confidence_shift_percentage_and_more.py  0013_alter_fundversionallocation_modifier.py  0014_alter_fundversionallocation_modifier.py  0015_fund_shares.py  0016_remove_fund_shares.py  0017_portfolio_cash_monthly_confidence_and_more.py  0018_remove_portfolio_cash_monthly_confidence_and_more.py  0019_rename_cash_confidence_shift_percentage_portfolio_confidence_shift_percentage_and_more.py  0020_fundversion_end_value_fundversion_start_value_and_more.py  0021_alter_portfolioversion_options_and_more.py  0022_alter_portfolioweek_options.py  0023_alter_portfolioversion_active_and_more.py  0024_portfolioversion_confidence_shift_percentage_and_more.py
holdings/: account.py  admin.py  api.py  documents.py  factories.py  fidelity.py  models.py  positions.py  serializers.py  test_account.py  test_api.py
notes/: 01-tickers-vs-funds  02-build-portfolio  03-debug-positions
scripts/: build.sh
tickers/: admin.py  models.py  ohlc.py  serializers.py  tickers.py
typings/knox/: auth.pyi  (+1 more)
(+59 files in other folders)
